@@ -1309,7 +1309,7 @@
         <TR>
           <TD class="scriptcommand">CircularSubareaMean #X #Y #R</TD>
           <TD>Reports the mean counts in a circular subarea of the A buffer defined by center point
-            <b>#X</b>:<b>#Y</b> and radius <b>#R</b>. Value can be assigned to variable at end of command. Command added
+            <b>#X</b>,<b>#Y</b> and radius <b>#R</b>. Value can be assigned to variable at end of command. Command added
             in 3.8, 04/20/20.</TD>
         </TR>
         <TR>
